[gd_scene load_steps=15 format=2]

[ext_resource path="res://GameComponents/ArenaGoals/classic_arena_goal.gd" type="Script" id=1]
[ext_resource path="res://Assets/GameComponents/ArenaGoals/art/arena_goals.png" type="Texture" id=2]
[ext_resource path="res://Assets/GameComponents/ArenaGoals/art/classic_goal_force_field.png" type="Texture" id=3]
[ext_resource path="res://Assets/GameComponents/ArenaGoals/audio/classic_goal_scored.ogg" type="AudioStream" id=4]

[sub_resource type="AtlasTexture" id=9]
flags = 1
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 50, 180 )

[sub_resource type="AtlasTexture" id=10]
flags = 1
atlas = ExtResource( 3 )
region = Rect2( 50, 0, 50, 180 )

[sub_resource type="AtlasTexture" id=11]
flags = 1
atlas = ExtResource( 3 )
region = Rect2( 100, 0, 50, 180 )

[sub_resource type="AtlasTexture" id=12]
flags = 1
atlas = ExtResource( 3 )
region = Rect2( 150, 0, 50, 180 )

[sub_resource type="AtlasTexture" id=13]
flags = 1
atlas = ExtResource( 3 )
region = Rect2( 200, 0, 50, 180 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [  ],
"loop": false,
"name": "off",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "on",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true
extents = Vector2( 1, 74 )

[sub_resource type="PhysicsMaterial" id=8]
bounce = 0.5

[sub_resource type="CapsuleShape2D" id=7]
radius = 23.0
height = 80.0

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 50, 110 )

[node name="ClassicArenaGoal" type="Area2D"]
collision_layer = 8
collision_mask = 4
script = ExtResource( 1 )
defending_player = 1
_is_pin = null

[node name="BackSprite" type="Sprite" parent="."]
position = Vector2( 39, 0 )
z_index = -1
texture = ExtResource( 2 )
hframes = 2
vframes = 3
frame = 3

[node name="ForceField" type="AnimatedSprite" parent="."]
position = Vector2( 2, 2 )
z_index = -1
frames = SubResource( 14 )
animation = "off"

[node name="FrontSprite" type="Sprite" parent="."]
position = Vector2( -46, 0 )
texture = ExtResource( 2 )
hframes = 2
vframes = 3
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 0 )
shape = SubResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 8
collision_mask = 4
physics_material_override = SubResource( 8 )

[node name="TopCollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -57, -106 )
rotation = -1.36136
shape = SubResource( 7 )

[node name="BackCollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -79, 0 )
shape = SubResource( 6 )

[node name="BottomCollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -57, 106 )
rotation = 1.36136
shape = SubResource( 7 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Sound"
